test/negative/212_negate_string.err
212_negate_string.fx:2:9: error: the appropriate match for '__negate__' of type '(string -> <unknown>)' is not found.
Candidates:
 '__negate__: (long -> long)' defined at Builtins.fx:L:C,
 '__negate__: ('t [+] -> <unknown>)' defined at Array.fx:L:C


1 errors occured during type checking.
